fixed image z-index

--- a/public/vanilla/sass/list.sass
+++ b/public/vanilla/sass/list.sass
@@ -28,6 +28,8 @@ ul.board-list
       height: $board-img-height 
       width: $board-img-width
       clip-path: circle(90px at center)
+      position: relative
+      z-index: -1
 
 main
   h1
